统一发件
取件登记查看接口重写